# pkg-updater

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
pkg_updater/: app.py  handlers.py  logger.py  updater.py
