[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-updater"
version = "1.0.2"
dependencies = ["psutil"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradishbijukchhe@gmail.com" }]
description = "A python script to update packages"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/pkg-updater"
Issues = "https://github.com/sandbox-pokhara/pkg-updater/issues"

[project.scripts]
pkg-updater = "pkg_updater.updater:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"pkg_updater" = "pkg_updater"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
